Sat Apr 24 00:36:05 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/dl/test_base.rb: add kfreebsd support.  based on a patch from
	  Petr Salinger in [ruby-core:29769].
	  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=560293

Sat Apr 24 00:14:41 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/openssl/ossl_ssl_session.c (SSL_SESSION_cmp): remove static for
	  loopy version of openssl (0.9.8l?).

Fri Apr 23 23:27:17 2010  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_config.c: fix compilation failure with
	  OpenSSL 0.9.8.

Fri Apr 23 17:29:35 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/openssl/ossl_config.c: OpenSSL 1.0.0 support.
	  [ruby-core:29256]

	* ext/openssl/extconf.rb: check some functions added/removed at
	  OpenSSL 1.0.0.

	* ext/openssl/ossl_engine.c (ossl_engine_s_load): use engines which
	  exists.

	* ext/openssl/ossl_ssl_session (SSL_SESSION_cmp): removed at 1.0.0,
	  so implement compatible fuction here.

Fri Apr 23 14:37:22 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gem_prelude.rb (Gem::QuickLoader.load_full_rubygems_library):
	  get rid of creating same regexps many times.

	* lib/rubygems/custom_require.rb (Kernel#require): ditto.

Fri Apr 23 14:07:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* doc/etc.rd, doc/etc.rd.ja: moved from ext/etc.

	* ext/etc.c (Init_etc): fixed rdoc.

Fri Apr 23 11:31:25 2010  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc: Update to RDoc 2.5.6.

Fri Apr 23 04:11:26 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ripper/test_parser_events.rb (test_unterminated_regexp):
	  separate test.

Fri Apr 23 01:47:54 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_wopen): shouldn't use FILE_FLAG_OVERLAPPED with
	  normal file.  #1807, #2510, #2549

Fri Apr 23 01:28:03 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* thread_win32.c (ubf_handle): remove unused typedef.

Thu Apr 22 23:10:59 2010  Yusuke Endoh  <mame@tsg.ne.jp>
